make js to handle button clicks

--- a/desafio1/index.html
+++ b/desafio1/index.html
@@ -9,14 +9,26 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
-    <title>Hello, world!</title>
+    <title>VJobs</title>
   </head>
   <body>
-    <nav class="navbar navbar-light bg-dark" >
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark" >
         <a class="navbar-brand" href="#">
             <img src="./sources/logo-h-vjobs.png" style="width: 100px;">
-            
         </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
+                      <li class="nav-item active">
+                        <a class="nav-link text-white" href="#">Vagas <span class="sr-only">(current)</span></a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link text-white" href="#">Sobre</a>
+                      </li>
+                    </ul>
+            </div>   
     </nav>
 
     <p>
@@ -103,7 +115,7 @@
 
                                 <a class="btn btn-warning" href="#">
                                         <i class="fas fa-edit fa-sm"></i>                                            
-                                    </a>
+                                </a>
                                     <a class="btn btn-danger" href="#">
                                             <i class="far fa-trash-alt fa-sm"></i>                                           
                                 </a>
